--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -96,17 +96,17 @@
     overflow: hidden;
     animation: BgAnimation 20s ease-in-out infinite;
 }
-
 /* Responsividade */
 @media (max-width: 768px) {
     .parallax {
         min-height: 100%; 
-    margin-top: 10vh;
+  
  
     }
 
     #subtitulo{
         margin-top: 5vh;
+        font-size: 15px;
     }
 
     .tituloPrincipal {
@@ -117,6 +117,7 @@
         margin-top: 15px;
     }
 }
+
 @keyframes BgAnimation {
     0% {
         background-image: url("../img/img-principal1.jpg");
