--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -681,7 +681,7 @@ text-transform: UPPERCASE;
 
 
 .section-profissionais {
-    background-image: url("./img/fundo-serviços.avif");
+  background-image: url("../img/fundo-serviços.avif");
     color: #fff;
     padding: 50px 0;
     text-align: center;
@@ -727,7 +727,6 @@ text-transform: UPPERCASE;
     font-size: 1.2rem;
     color: #ccc;
     margin-top: 10px;
-    font-weight: 700;
     text-align: center;
 }
 
